--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,12 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
+        // For MongoDB
+        classpath "io.realm:realm-gradle-plugin:10.8.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
